# sl2

./: .gitignore  0.spaces.star  CMakeLists.txt  LICENSE  README.md  bootstrap.cmake  profile.sh  spaces.run.star  spaces.star
SDK/: .gitignore  CMakeLists.txt
app/: .gitignore  CMakeLists.txt
app/src/: App.cpp  App.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Connector.cpp  Connector.hpp  Group.cpp  Group.hpp  SlPrinter.cpp  SlPrinter.hpp  main.cpp  sl_config.h  sos_crt_symbols.cpp  sos_crt_symbols.hpp
app/src/groups/: Admin.cpp  Admin.hpp  Application.cpp  Application.hpp  Bench.cpp  Bench.hpp  Bsp.cpp  Bsp.hpp  Cloud.cpp  Cloud.hpp  Connection.cpp  Connection.hpp  DebugTrace.cpp  DebugTrace.hpp  FileSystem.cpp  FileSystem.hpp  Framework.cpp  Framework.hpp  HardwareGroup.cpp  HardwareGroup.hpp  KeysGroup.cpp  KeysGroup.hpp  Mcu.cpp  Mcu.hpp  Report.cpp  Report.hpp  Script.cpp  Script.hpp  Sdk.cpp  Sdk.hpp  Settings.cpp  Settings.hpp  Task.cpp  Task.hpp  TeamGroup.cpp  TeamGroup.hpp  Terminal.cpp  Terminal.hpp  Thing.cpp  Thing.hpp  (+4 more)
app/src/groups/devices/: Flash.cpp  Flash.hpp
app/src/settings/: CloudSettings.hpp  Credentials.hpp  FilePathSettings.hpp  GlobalSettings.hpp  HardwareSettings.hpp  LocalSettings.hpp  PackageSettings.hpp  SessionSettings.hpp  TestSettings.hpp  WorkspaceSettings.cpp  WorkspaceSettings.hpp
app/src/utilities/: DeviceExecutionContext.cpp  DeviceExecutionContext.hpp  GcovParser.cpp  GcovParser.hpp  Job.cpp  Job.hpp  LocalServer.cpp  LocalServer.hpp  OperatingSystem.cpp  OperatingSystem.hpp  Packager.cpp  Packager.hpp  Process.cpp  Process.hpp  Shortcut.cpp  Shortcut.hpp  Switch.cpp  Switch.hpp  Updater.cpp  Updater.hpp
spaces/: CMakeLists.txt
tests/: CMakeLists.txt
